...
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false">
...
